# FishFeederFirmware

./: fish_debug.c
2024-2025_fish_C/: CMakeLists.txt  Feeder.c  Menus.c  Neal Snooke Code.c  Report  feeder.c  feeder.h  file.c  file.h  fish.c  fish.h  main.c  menu.c  menu.h  scheduleTime.c  setUpTime.c  setUpTime.h  systemTime.txt  time.c  time.h  timeStruct.h  userControl.c  userControl.h
2024_2025_fish_C/: CMakeLists.txt  FileFunctions.txt  FileTemplete  README.txt  Report  fishFeederFirmwareSaveTextFile.txt  main.c  systemTime.txt
2024_2025_fish_C/DateTime/: dateTime.c  dateTime.h
2024_2025_fish_C/Enum/: operatingModeEnum.h
2024_2025_fish_C/Feeder/: feeder.c  feeder.h
2024_2025_fish_C/FeederSchedule/: feederSchedule.c  feederSchedule.h
2024_2025_fish_C/File/: file.c  file.h
2024_2025_fish_C/Fish/: fish.c  fish.h
2024_2025_fish_C/Main/: main.c
2024_2025_fish_C/Menu/: menu.c  menu.h
2024_2025_fish_C/ScheduleTime/: scheduleTime.c  scheduleTime.h
2024_2025_fish_C/SetupScheduleTime/: setupScheduleTime.c  setupScheduleTime.h
2024_2025_fish_C/SetupTime/: setupTime.c  setupTime.h
2024_2025_fish_C/Structs/: dateTimeStruct.h  feedingScheduleStruct.h  lineStruct.h  textStruct.h
2024_2025_fish_C/SystemTime/: systemTime.c  systemTime.h  time.c  time.h
2024_2025_fish_C/UserControl/: userControl.c  userControl.h
Docx/: Ideas.docx  References.docx
